--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "chatbot-app",
+  "name": "togetherai-proxy",
   "version": "1.0.0",
-  "description": "Chatbot IA utilisant l'API Gemini",
+  "description": "Proxy server for Together AI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "node-fetch": "^2.7.0"
   }
 }
