--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "togetherai-proxy",
+  "name": "chatbot-app",
   "version": "1.0.0",
-  "description": "Proxy server for Together AI",
+  "description": "Chatbot IA utilisant l'API OpenAI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "node-fetch": "^2.7.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
